compiler-tests/src/test/data/diagnostic/dependencygraph/RuntimeTracingRequiresGraphFactory.kt
// ENABLE_RUNTIME_TRACING
// RENDER_DIAGNOSTICS_FULL_TEXT

import dev.zacsweers.metro.DependencyGraph

@DependencyGraph
interface <!METRO_TRACE_ERROR!>AppGraph<!> {
  val string: String
}
